--- a/software/wilddemo/.vscode/settings.json
+++ b/software/wilddemo/.vscode/settings.json
@@ -5,8 +5,8 @@
     "idf.espAdfPathWin": "C:\\Users\\bende\\.espressif\\esp-adf",
     "idf.espMdfPathWin": "C:\\Users\\bende\\.espressif\\esp-mdf",
     "idf.openOcdConfigs": [
-        "board/esp32-wrover-kit-3.3v.cfg"
+        "board/esp32p4-builtin.cfg"
     ],
-    "idf.portWin": "COM1",
+    "idf.portWin": "COM9",
     "idf.toolsPathWin": "C:\\Users\\bende\\.espressif"
 }
