--- a/software/wilddemo/.vscode/settings.json
+++ b/software/wilddemo/.vscode/settings.json
@@ -1,5 +1,20 @@
 {
-    "C_Cpp.default.compilerPath": "",
-    "idf.flashType": "UART",
-    "idf.portWin": "COM13"
+  "C_Cpp.intelliSenseEngine": "default",
+  "idf.adapterTargetName": "esp32p4",
+  "idf.openOcdConfigs": [
+    "board/esp32p4-builtin.cfg"
+  ],
+  "idf.port": "/dev/ttyACM0",
+  "idf.flashType": "UART",
+  "idf.espIdfPath": "/home/peter/esp/v5.4/esp-idf",
+  "idf.toolsPath": "/home/peter/.espressif",
+  "idf.portWin": "COM13",
+  "files.associations": {
+    "sdmmc_host.h": "c",
+    "sdmmc_default_configs.h": "c",
+    "sdmmc_cmd.h": "c",
+    "esp_vfs_fat.h": "c",
+    "ff.h": "c",
+    "sdspi_host.h": "c"
+  }
 }
